<resources>
    <string name="app_name">Bags</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categories">Categories</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_name">User Name</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">Sign In</string>
    <string name="update">UPDATE</string>
    <string name="loading">LOADING.........</string>
    <string name="error">ERROR</string>

    <string name="explore">Explore</string>
    <string name="schedule">Schedule</string>
    <string name="reminder">Reminder</string>
    <string name="fab_button">fab button</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="home">Home</string>
    <string name="settings">settings</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="do_you_raelly_want_to_elete_account">Do you really want to delete account ?</string>
    <string name="bag">bag</string>
    <string name="textview">TextView</string>
    <string name="description_for_bag_style_and_category">description for bag style and category</string>
    <string name="_219">219</string>
    <string name="go_to_category_women">GO to category women</string>
    <string name="add_to_favorites">ADD TO FAVORITES</string>
    <string name="delete">DELETE</string>
    <string name="add_to_favorite">Add TO FAVORITE</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="no_results">NO RESULTS</string>
    <string name="title">Title</string>
    <string name="login">LOGIN</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="new_credentials">NEW CREDENTIALS</string>
    <string name="to_home">TO HOME</string>
    <string name="send_verification_email">Send verification email</string>


</resources>