<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nested_graph_home"
        android:icon="@drawable/ic_outline_home"
        android:title="@string/home" />
   <!-- <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />-->
    <item
        android:id="@+id/nested_graph_favorites"
        android:title="@string/favorite"
        android:icon="@drawable/ic_favorite"/>
    <item
        android:id="@+id/nested_graph_cart"
        android:icon="@drawable/ic_baseline_add_shopping_cart_24"
        android:title="@string/cart" />

    <item
        android:id="@+id/deleteAccount"
        android:icon="@drawable/ic_profile"
        android:title="@string/delete_account" />


</menu>