<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="favoriteBag"
            type="com.example.core.domain.FavoriteOrder" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="FavoritesDetailsFragment.kt">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_view_details_favorites"
                android:layout_width="match_parent"
                android:layout_height="270dp"
                android:contentDescription="@string/bag"
                android:scaleType="fitCenter"
                app:imageUrl="@{favoriteBag.url_product}"
                tools:srcCompat="@mipmap/bag_1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tv_view_details_favorites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@{favoriteBag.name_product}"
                    android:textAppearance="?attr/textAppearanceHeadline5" />

                <TextView
                    android:id="@+id/tv_details_favorites_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{favoriteBag.description_product}"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:textColor="?android:attr/textColorSecondary" />

                <TextView
                    android:id="@+id/txt_view_details_favorites_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{favoriteBag.price_product}"
                    android:textAppearance="?attr/textAppearanceHeadline4" />

                <Button
                    android:id="@+id/btn_details_favorites_add_to_cart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?attr/materialButtonOutlinedStyle"
                    android:text="@string/add_to_favorite" />

                <Button
                    android:id="@+id/btn_details_favorites_delete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?attr/materialButtonOutlinedStyle"
                    android:text="@string/delete" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>